# Dispatcharr

./: CHANGELOG.md  pyproject.toml  version.py
apps/accounts/: api_views.py
apps/channels/: api_views.py
apps/epg/: api_views.py
apps/hdhr/: api_views.py
apps/m3u/: api_views.py  tasks.py
apps/output/: views.py
apps/plugins/: api_urls.py  api_views.py  loader.py
apps/proxy/: tasks.py
apps/proxy/live_proxy/input/: buffer.py
apps/proxy/ts_proxy/: server.py  stream_buffer.py  stream_manager.py  views.py
apps/proxy/ts_proxy/services/: channel_service.py
apps/proxy/vod_proxy/: connection_manager.py  multi_worker_connection_manager.py  urls.py  views.py
apps/vod/: api_views.py
core/: api_views.py  tasks.py  utils.py
dispatcharr/: settings.py
docker/: nginx.conf
frontend/: package-lock.json
frontend/src/: api.js
frontend/src/components/: FloatingVideo.jsx
frontend/src/components/__tests__/: FloatingVideo.test.jsx  Sidebar.test.jsx
frontend/src/components/cards/: StreamConnectionCard.jsx
frontend/src/components/cards/__tests__/: PluginCard.test.jsx  StreamConnectionCard.test.jsx
frontend/src/components/forms/: Channel.jsx  User.jsx
frontend/src/components/tables/: ChannelsTable.jsx
frontend/src/config/: navigation.js
frontend/src/pages/: Guide.jsx  Plugins.jsx
frontend/src/pages/__tests__/: Guide.test.jsx  Plugins.test.jsx
frontend/src/store/: plugins.jsx
frontend/src/utils/: dateTimeUtils.js
frontend/src/utils/__tests__/: dateTimeUtils.test.js
frontend/src/utils/pages/: PluginsUtils.js
(+1 files in other folders)
