[project]
name = "dispatcharr"
description = "Dispatcharr - Stream dispatching and management"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "Django==6.0.3",
    "psycopg2-binary==2.9.11",
    "celery[redis]==5.6.3",
    "djangorestframework==3.16.1",
    "requests==2.33.0",
    "psutil==7.2.2",
    "pillow",
    "drf-spectacular>=0.29.0",
    "streamlink",
    "python-vlc",
    "yt-dlp",
    "gevent==25.9.1",
    "daphne",
    "uwsgi",
    "django-cors-headers",
    "djangorestframework-simplejwt",
    "m3u8",
    "rapidfuzz==3.14.3",
    "regex",
    "tzlocal",
    "pytz",
    "torch==2.11.0+cpu",
    "sentence-transformers==5.3.0",
    "channels",
    "channels-redis==4.3.0",
    "django-filter",
    "django-celery-beat>=2.9.0",
    "lxml==6.0.2",
    "packaging",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyTorch CPU-only wheels index
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["dispatcharr", "apps", "core"]

[tool.hatch.version]
path = "version.py"
